--- a/排柜计划/周计划看板.html
+++ b/排柜计划/周计划看板.html
@@ -357,7 +357,7 @@
           <h3 class="font-semibold">库占比分析</h3>
           <div class="flex space-x-2">
             <button class="text-sm px-2 py-1 rounded bg-primary/10 text-primary flex items-center">
-              <i class="fa fa-rose mr-1"></i> 图表
+              <i class="fa fa-pie-chart mr-1"></i> 分布
             </button>
             <button class="text-sm px-2 py-1 rounded text-gray-500 hover:bg-gray-100 flex items-center">
               <i class="fa fa-download mr-1"></i> 导出
