feat: 添加搜索功能到入库统计页面
refactor: 重构客户价卡配置界面，优化表格样式和交互

feat: 新增SKU图片导入Excel工具

--- a/排柜计划/周计划看板.html
+++ b/排柜计划/周计划看板.html
@@ -226,6 +226,10 @@
     <div class="bg-white rounded-xl p-4 card-shadow mb-8">
       <div class="flex items-center justify-between mb-4">
         <h3 class="font-semibold">入库统计</h3>
+        <div class="relative">
+          <input type="text" placeholder="搜索仓库..." class="pl-9 pr-4 py-2 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/30 focus:border-primary w-full md:w-64">
+          <i class="fa fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
+        </div>
       </div>
       
       <div class="overflow-x-auto">
