feat(价格卡管理): 更新预设客户数据和价卡配置
- 将预设客户名称从"MD001"改为"Demo"
- 更新价卡类型为"卸货费"、"仓储费"和"出库费"
- 在套餐维护页面添加折扣和金额调整功能
- 优化价卡关联页面的筛选和日期选择功能

--- a/价卡配置/关联价卡/customer.html
+++ b/价卡配置/关联价卡/customer.html
@@ -243,7 +243,7 @@
   <script>
     // 预设客户数据
     const presetCustomers = [
-      { id: 1, name: "MD001", code: "MD001", contact: "zsw", phone: "13800138000" }
+      { id: 1, name: "Demo", code: "Demo", contact: "zsw", phone: "13800138000" }
     ];
     
     // 预设价卡数据
