feat(客户管理): 在客户页面添加关联杂费价卡按钮

--- a/价卡配置/关联价卡/customer.html
+++ b/价卡配置/关联价卡/customer.html
@@ -294,7 +294,10 @@
                 <i class="fa fa-eye mr-1"></i>查看价卡
               </a>
               <a href="associate-price-card.html?customerId=${customer.id}" class="associate-price-card-btn px-3 py-1.5 bg-primary/10 text-primary text-sm rounded-md hover:bg-primary/20 transition-all-300 flex items-center justify-center min-w-[90px]">
-                <i class="fa fa-link mr-1"></i>关联价卡
+                <i class="fa fa-link mr-1"></i>关联成本价卡
+              </a>
+              <a href="associate-price-card.html?customerId=${customer.id}" class="associate-price-card-btn px-3 py-1.5 bg-primary/10 text-primary text-sm rounded-md hover:bg-primary/20 transition-all-300 flex items-center justify-center min-w-[90px]">
+                <i class="fa fa-link mr-1"></i>关联杂费价卡
               </a>
             </div>
           </td>
