--- a/库龄调整/index.html
+++ b/库龄调整/index.html
@@ -51,76 +51,18 @@
   <div class="container mx-auto px-4 py-8 max-w-7xl">
     <!-- 页面头部 -->
     <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-8">
-      <div>
-        <h1 class="text-[clamp(1.5rem,3vw,2.5rem)] font-bold text-dark">库龄调整</h1>
-        <p class="text-secondary mt-2">批量修改批次库龄</p>
-      </div>
       <button id="importBtn" class="mt-4 md:mt-0 bg-primary hover:bg-primary/90 text-white px-6 py-2 rounded-lg flex items-center transition-all duration-300 shadow-md hover:shadow-lg">
         <i class="fa fa-upload mr-2"></i>
         导入
       </button>
     </div>
-
-    <!-- 导入记录列表 -->
-    <div class="bg-white rounded-xl p-4 md:p-6 table-shadow">
-      <!-- 数据表格 -->
-      <div class="overflow-x-auto">
-        <table class="w-full text-left">
-          <thead>
-            <tr class="border-b border-gray-200">
-              <th class="pb-4 pl-4 font-semibold text-secondary">序号</th>
-              <th class="pb-4 px-4 font-semibold text-secondary">操作人</th>
-              <th class="pb-4 px-4 font-semibold text-secondary">操作时间</th>
-              <th class="pb-4 px-4 font-semibold text-secondary">批次数</th>
-            </tr>
-          </thead>
-          <tbody id="importRecordTable">
-            <!-- 模拟初始数据 -->
-            <tr class="border-b border-gray-100 hover:bg-gray-50 transition-all">
-              <td class="py-4 pl-4 text-secondary">1</td>
-              <td class="py-4 px-4">张三</td>
-              <td class="py-4 px-4 text-secondary">2025-12-01 14:30:25</td>
-              <td class="py-4 px-4">128</td>
-            </tr>
-            <tr class="border-b border-gray-100 hover:bg-gray-50 transition-all">
-              <td class="py-4 pl-4 text-secondary">2</td>
-              <td class="py-4 px-4">李四</td>
-              <td class="py-4 px-4 text-secondary">2025-12-02 09:15:40</td>
-              <td class="py-4 px-4">89</td>
-            </tr>
-            <tr class="border-b border-gray-100 hover:bg-gray-50 transition-all">
-              <td class="py-4 pl-4 text-secondary">3</td>
-              <td class="py-4 px-4">王五</td>
-              <td class="py-4 px-4 text-secondary">2025-12-03 16:20:15</td>
-              <td class="py-4 px-4">56</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <!-- 分页 -->
-      <div class="flex justify-between items-center mt-6">
-        <p class="text-secondary text-sm">共 3 条记录，当前第 1 页</p>
-        <div class="flex space-x-1">
-          <button class="px-3 py-1 border border-gray-200 rounded hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed" disabled>
-            <i class="fa fa-chevron-left text-xs"></i>
-          </button>
-          <button class="px-3 py-1 border border-primary bg-primary text-white rounded">1</button>
-          <button class="px-3 py-1 border border-gray-200 rounded hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed" disabled>
-            <i class="fa fa-chevron-right text-xs"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- 导入弹窗 -->
   <div id="importModal" class="fixed inset-0 bg-black/50 flex items-center justify-center z-50 hidden">
     <div class="bg-white rounded-xl w-full max-w-md modal-shadow transform transition-all duration-300 scale-95 opacity-0" id="modalContent">
       <div class="p-6">
         <!-- 弹窗头部 -->
         <div class="flex justify-between items-center mb-6">
-          <h3 class="text-xl font-semibold text-dark">导入库龄调整数据</h3>
+          <h3 class="text-xl font-semibold text-dark">导入</h3>
           <button id="closeModal" class="text-secondary hover:text-dark transition-all">
             <i class="fa fa-times text-xl"></i>
           </button>
