fix: 修正新增按钮跳转链接指向错误页面

--- a/LTL/index.html
+++ b/LTL/index.html
@@ -179,7 +179,7 @@
   <script>
     // 「新增按钮」跳转逻辑
     document.getElementById('add-button').addEventListener('click', function() {
-      window.location.href = 'add.html';
+      window.location.href = 'add customer.html';
     });
   </script>
   
