feat: 更新业务管理页面与产品信息标签
- 修改业务管理页面中的标签，将“基本信息”更改为“产品信息”
- 新增业务管理页面，包含搜索、功能按钮和数据表格区域，支持业务记录的增删改查功能
- 优化页面结构与样式，提升用户交互体验

--- a/入库/入库详情.html
+++ b/入库/入库详情.html
@@ -207,7 +207,7 @@
     <div class="bg-white rounded-lg shadow-sm mb-4">
       <nav class="flex space-x-6 border-b border-neutral-200 px-4">
         <button class="tab-item tab-active px-4 py-3 text-sm font-medium" data-tab="basic">
-          基本信息
+          产品信息
         </button>
         <button class="tab-item tab-inactive px-4 py-3 text-sm font-medium" data-tab="delivery">
           配送信息
