fix: 更新客户看板页面标题以简化表述
- 修改页面标题和描述，去掉“决策层”字样，提升简洁性
- 确保页面内容与标题一致，增强用户理解

--- a/首页/customer.html
+++ b/首页/customer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>海外仓看板 - 客户运营决策层</title>
+  <title>海外仓看板 - 客户运营</title>
   <!-- 引入外部资源 -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -110,7 +110,7 @@
     <!-- 页面标题 -->
     <div class="mb-6">
       <h1 class="text-2xl font-bold text-dark mb-2">客户看板</h1>
-      <p class="text-gray-500">客户运营决策层 - 海外仓看板</p>
+      <p class="text-gray-500">客户运营 - 海外仓看板</p>
     </div>
 
     <!-- 模块切换Tab -->
