--- a/排柜计划/warehouse-dashboard.html
+++ b/排柜计划/warehouse-dashboard.html
@@ -149,6 +149,63 @@
         transform: translateY(0);
       }
     }
+
+    /* 漏斗图样式 */
+    .funnel-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 1.25rem;
+    }
+
+    .funnel-labels {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      font-size: 0.75rem;
+      color: #4b5563;
+      white-space: nowrap;
+    }
+
+    .funnel-bars {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 0.75rem;
+    }
+
+    .funnel-bar {
+      position: relative;
+      height: 32px;
+      border-radius: 0.375rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.75rem;
+      font-weight: 600;
+      color: #ffffff;
+      margin-inline: auto;
+      overflow: hidden;
+    }
+
+    .funnel-bar span {
+      position: relative;
+      z-index: 1;
+    }
+
+    .funnel-bar::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      opacity: 0.12;
+      background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.6), transparent);
+    }
+
+    .funnel-percentage-line {
+      height: 1px;
+      background: linear-gradient(to right, transparent, #9ca3af, transparent);
+      margin-bottom: 0.25rem;
+    }
   </style>
 </head>
 <body class="bg-gradient-to-br from-gray-50 to-gray-100">
@@ -314,77 +371,44 @@
         </div>
       </div>
 
-      <!-- 汇总进度条 -->
+      <!-- 汇总漏斗图 -->
       <div class="bg-white rounded-xl p-4 md:p-6 card-shadow fade-in">
         <h2 class="text-lg font-semibold text-gray-800 mb-4 flex items-center gap-2">
           <i class="fas fa-tasks text-blue-600"></i>
           进度统计
         </h2>
-        <div class="space-y-5">
-          <div>
-            <div class="flex justify-between items-center mb-2">
-              <span class="text-sm text-gray-600 flex items-center gap-2">
-                <i class="fas fa-boxes text-blue-500"></i>
-                预报柜量
-              </span>
-              <span class="text-sm font-semibold text-gray-800">448</span>
+        <div class="space-y-4">
+          <div class="funnel-percentage-line"></div>
+          <div class="flex justify-between items-center text-xs text-gray-500 mb-1">
+            <span></span>
+            <span id="funnelTopPercent">100%</span>
+          </div>
+          <div class="funnel-wrapper">
+            <div class="funnel-labels">
+              <span>预报柜量</span>
+              <span>已到仓柜量</span>
+              <span>已提空柜量</span>
+              <span>上架柜量</span>
             </div>
-            <div class="w-full bg-gray-200 rounded-full h-4 overflow-hidden">
-              <div class="bg-gradient-to-r from-blue-300 to-blue-400 h-4 rounded-full progress-bar flex items-center justify-end pr-2" style="width: 100%">
-                <span class="text-xs font-semibold text-white">100%</span>
+            <div class="funnel-bars">
+              <div id="funnelTotalBar" class="funnel-bar" style="background: #93c5fd; width: 100%;">
+                <span id="funnelTotalValue">448</span>
+              </div>
+              <div id="funnelArrivedBar" class="funnel-bar" style="background: #60a5fa; width: 40%;">
+                <span id="funnelArrivedValue">152</span>
+              </div>
+              <div id="funnelEmptyBar" class="funnel-bar" style="background: #1d4ed8; width: 25%;">
+                <span id="funnelEmptyValue">78</span>
+              </div>
+              <div id="funnelShelfBar" class="funnel-bar" style="background: #3b82f6; width: 25%;">
+                <span id="funnelShelfValue">78</span>
               </div>
             </div>
           </div>
-          <div>
-            <div class="flex justify-between items-center mb-2">
-              <span class="text-sm text-gray-600 flex items-center gap-2">
-                <i class="fas fa-truck text-indigo-500"></i>
-                已到仓柜量
-              </span>
-              <span class="text-sm font-semibold text-gray-800">152 <span class="text-xs text-gray-500">(33.9%)</span></span>
-            </div>
-            <div class="w-full bg-gray-200 rounded-full h-4 overflow-hidden">
-              <div class="bg-gradient-to-r from-indigo-400 to-indigo-500 h-4 rounded-full progress-bar flex items-center justify-end pr-2" style="width: 33.9%">
-                <span class="text-xs font-semibold text-white">33.9%</span>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="flex justify-between items-center mb-2">
-              <span class="text-sm text-gray-600 flex items-center gap-2">
-                <i class="fas fa-check-circle text-green-500"></i>
-                已提空柜量
-              </span>
-              <span class="text-sm font-semibold text-gray-800">78 <span class="text-xs text-gray-500">(17.4%)</span></span>
-            </div>
-            <div class="w-full bg-gray-200 rounded-full h-4 overflow-hidden">
-              <div class="bg-gradient-to-r from-green-400 to-green-500 h-4 rounded-full progress-bar flex items-center justify-end pr-2" style="width: 17.4%">
-                <span class="text-xs font-semibold text-white">17.4%</span>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="flex justify-between items-center mb-2">
-              <span class="text-sm text-gray-600 flex items-center gap-2">
-                <i class="fas fa-warehouse text-purple-500"></i>
-                上架柜量
-              </span>
-              <span class="text-sm font-semibold text-gray-800">78 <span class="text-xs text-gray-500">(17.4%)</span></span>
-            </div>
-            <div class="w-full bg-gray-200 rounded-full h-4 overflow-hidden">
-              <div class="bg-gradient-to-r from-purple-400 to-purple-500 h-4 rounded-full progress-bar flex items-center justify-end pr-2" style="width: 17.4%">
-                <span class="text-xs font-semibold text-white">17.4%</span>
-              </div>
-            </div>
-          </div>
-          <div class="pt-4 border-t-2 border-gray-200 mt-4">
-            <div class="text-center bg-gradient-to-r from-blue-50 to-indigo-50 rounded-lg p-4">
-              <div class="flex items-center justify-center gap-2 mb-2">
-                <i class="fas fa-trophy text-yellow-500"></i>
-                <span class="text-3xl font-bold bg-gradient-to-r from-blue-600 to-indigo-600 bg-clip-text text-transparent">17.4%</span>
-              </div>
-              <p class="text-sm text-gray-600 font-medium">上架完成率</p>
-            </div>
+          <div class="funnel-percentage-line mt-3"></div>
+          <div class="text-center text-xs text-gray-500">
+            <span>上架完成率：</span>
+            <span class="font-semibold text-blue-600" id="funnelBottomRate">17.4%</span>
           </div>
         </div>
       </div>
@@ -504,6 +528,55 @@
         ? ((totals.grandTotal.putAway / totals.grandTotal.total) * 100).toFixed(1)
         : 0;
       document.getElementById('statRate').textContent = rate + '%';
+
+      // 同步更新漏斗图
+      updateFunnelChart(totals);
+    }
+
+    // 更新漏斗图数据与宽度
+    function updateFunnelChart(totals) {
+      const total = totals.grandTotal.total || 0;
+      const arrived = totals.grandTotal.arrived || 0;
+      const empty = totals.grandTotal.putAway || 0;
+      const shelf = totals.grandTotal.putAway || 0; // 当前无单独上架数据，暂与提空柜量保持一致
+
+      const totalBar = document.getElementById('funnelTotalBar');
+      const arrivedBar = document.getElementById('funnelArrivedBar');
+      const emptyBar = document.getElementById('funnelEmptyBar');
+      const shelfBar = document.getElementById('funnelShelfBar');
+
+      const totalVal = document.getElementById('funnelTotalValue');
+      const arrivedVal = document.getElementById('funnelArrivedValue');
+      const emptyVal = document.getElementById('funnelEmptyValue');
+      const shelfVal = document.getElementById('funnelShelfValue');
+
+      const topPercentEl = document.getElementById('funnelTopPercent');
+      const bottomRateEl = document.getElementById('funnelBottomRate');
+
+      if (!totalBar || !arrivedBar || !emptyBar || !shelfBar) return;
+
+      // 文本数值
+      if (totalVal) totalVal.textContent = total.toLocaleString();
+      if (arrivedVal) arrivedVal.textContent = arrived.toLocaleString();
+      if (emptyVal) emptyVal.textContent = empty.toLocaleString();
+      if (shelfVal) shelfVal.textContent = shelf.toLocaleString();
+
+      // 宽度和百分比（相对预报柜量）
+      const safePercent = (v) => total > 0 ? (v / total) * 100 : 0;
+      const arrivedPercent = safePercent(arrived);
+      const emptyPercent = safePercent(empty);
+      const shelfPercent = safePercent(shelf);
+
+      totalBar.style.width = '100%';
+      arrivedBar.style.width = `${Math.max(arrivedPercent, 5)}%`;
+      emptyBar.style.width = `${Math.max(emptyPercent, 5)}%`;
+      shelfBar.style.width = `${Math.max(shelfPercent, 5)}%`;
+
+      if (topPercentEl) topPercentEl.textContent = '100%';
+      if (bottomRateEl) {
+        const rate = safePercent(shelf);
+        bottomRateEl.textContent = (rate || 0).toFixed(1) + '%';
+      }
     }
 
     // 渲染表格
