--- a/LTL/details.html
+++ b/LTL/details.html
@@ -62,6 +62,10 @@
         flex-direction: column;
       }
     }
+    /* 隐藏下单按钮 */
+    .order-btn {
+      display: none !important;
+    }
   </style>
 </head>
 <body class="bg-gray-100 min-h-screen">
