--- a/入库/仓库审核/index.html
+++ b/入库/仓库审核/index.html
@@ -121,17 +121,17 @@
       <div class="mt-5 alert-warning animate-fadeIn">
         <div class="flex items-start">
           <div class="text-sm flex-1">
-            <p class="font-medium text-red-800">注意：车队已修改送仓日期</p>
+            <p class="font-medium text-red-800">注意：车队预约时间和已确认时间不一致</p>
             <div class="mt-2 grid grid-cols-1 md:grid-cols-2 gap-2">
               <p class="text-red-700 flex items-center">
                 <i class="fa fa-clock-o mr-2"></i>
-                <span class="font-medium">原日期：</span>
-                <span class="ml-1">2025-11-26</span>
+                <span class="font-medium">送仓时间（仓库确认）：</span>
+                <span class="ml-1">2025-11-26 PM</span>
               </p>
               <p class="text-red-700 flex items-center">
                 <i class="fa fa-calendar-check-o mr-2"></i>
-                <span class="font-medium">修改日期：</span>
-                <span class="ml-1">2025-11-28</span>
+                <span class="font-medium">送仓时间（车队预约）：</span>
+                <span class="ml-1">2025-11-28 AM</span>
               </p>
             </div>
           </div>
