--- a/入库/仓库审核/index.html
+++ b/入库/仓库审核/index.html
@@ -121,7 +121,7 @@
       <div class="mt-5 alert-warning animate-fadeIn">
         <div class="flex items-start">
           <div class="text-sm flex-1">
-            <p class="font-medium text-red-800">注意：车队预约时间和已确认时间不一致</p>
+            <p class="font-medium text-red-800">注意：预约送仓时间存在差异！</p>
             <div class="mt-2 grid grid-cols-1 md:grid-cols-2 gap-2">
               <p class="text-red-700 flex items-center">
                 <i class="fa fa-clock-o mr-2"></i>
