--- a/首页/customer.html
+++ b/首页/customer.html
@@ -104,6 +104,15 @@
       }
     }
   </style>
+  <style>
+    /* 隐藏所有问号提示按钮 */
+    i.fa-question-circle,
+    i.fa-question,
+    button:has(i[class*="fa-question"]),
+    button:has(i[class*="question-circle"]) {
+      display: none !important;
+    }
+  </style>
 </head>
 <body class="font-inter bg-gray-50 text-dark min-h-screen">
   <main class="container mx-auto px-4 py-6 max-w-[1920px]">
